# easyneural

./: Cargo.toml  LICENSE  README.md
src/: axon.rs  axon_input.rs  genetic.rs  layer.rs  lib.rs  network.rs  neuron.rs  neuron_repository.rs  neuron_value.rs  randomizer.rs  simulating_world.rs  simulation.rs  specimen.rs  trainer.rs  training_ground.rs  world.rs
tests/: integration_tests.rs
