[package]
name = "easyneural"
version = "0.1.0"
authors = ["mgr-inz-rafal <rchabowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3.2"
serde = "1.0.104"
typetag = "0.1"
rand = "0.7.2"
rand_distr = "0.2.2"
if_chain = "1.0.0"