[package]
name = "easyneural"
version = "0.1.0"
authors = ["Rafał Chabowski <rchabowski@gmail.com>"]
edition = "2018"
description = "This library will let you train neural networks easily"
license = "MIT"
homepage = "https://github.com/mgr-inz-rafal/easyneural"
repository = "https://github.com/mgr-inz-rafal/easyneural"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.7"
rand_distr = "0.2"
serde_json = "1.0"
if_chain = "1.0"

[dev-dependencies]
approx = "0.3"